welcome.lessons.welcome.bat.bool2.WithoutDoubles.scala.error
withoutDoubles:8: error: reassignment to val
        die1=1
            ^withoutDoubles:11: error: reassignment to val
        die1=die1+1
            ^withoutDoubles:6: error: type mismatch;
 found   : Unit
 required: Int
    if(die1==die2) {
    ^